<resources>
    <!-- 主页 -->
    <string name="app_name">VegSurveyAssistant</string>
    <string name="nearby">附近</string>
    <string name="sampleplot">样方</string>
    <string name="samplepoint">样点</string>
    <string name="sampleplot_investigate">样方调查</string>
    <string name="samplepoint_investigate">样点调查</string>
    <string name="my">我</string>
    <string name="grass">草地</string>
    <string name="bush">灌丛</string>
    <string name="forest">森林</string>
    <string name="herb">草本</string>
    <string name="arbor">灌木</string>
    <string name="shrub">乔木</string>
    <string name="loading_hint">加载中&#8230;</string>
    <string name="search">搜索</string>
    <string name="press_again_to_exit">再按一次退出程序</string>
    <string name="loading_data">数据加载中&#8230;</string>
    <string name="data_load_fail">数据加载失败</string>

    <!-- 通用 -->
    <string name="hint_text">待填</string>
    <string name="human_activity">人类活动</string>
    <string name="auto_position">自动定位</string>
    <string name="longitude">经度</string>
    <string name="latitude">纬度</string>
    <string name="investigator">调查人</string>
    <string name="investigate_date">调查时间</string>
    <string name="note">备注</string>
    <string name="community_coverage_percent">群落盖度(%)</string>
    <string name="community_height_m">群落高度(m)</string>
    <string name="code">编号</string>
    <string name="land_type">样地类型</string>

    <!-- 样地相关 -->
    <string-array name="slope_position_array">
        <item>上坡位</item>
        <item>中坡位</item>
        <item>下坡位</item>
    </string-array>
    <string name="sampleland_info">样地信息</string>
    <string name="sampleland_code">样地编号*</string>
    <string name="administrative_region">行政区域</string>
    <string name="aspect">坡向</string>
    <string name="slope">坡度</string>
    <string name="landform">地貌</string>
    <string name="soil_characteristic">土壤特征</string>
    <string name="slope_position">坡位</string>
    <string name="sampleplot_list">样方列表</string>
    <string name="herb_sampleplot_list">草本样方列表</string>
    <string name="arbor_sampleplot_list">灌木样方列表</string>
    <string name="shrub_sampleplot_list">乔木样方列表</string>
    <string name="sampleplot_count">样方数量</string>
    <string name="sampleplot_add">添加样方</string>

    <!-- 样方相关 -->
    <string name="sampleplot_info">样方信息</string>
    <string name="sampleplot_code">样方编号*</string>
    <string name="belong_sampleplot_code">所在样方编号</string>
    <string name="belong_shrub_sampleplot_code">所在灌木样方编号</string>
    <string name="belong_arbor_sampleplot_code">所在乔木样方编号</string>
    <string name="community_name">群落名称</string>
    <string name="plot_length_m">样方长(m)</string>
    <string name="plot_width_m">样方宽(m)</string>
    <string name="photo_list">照片列表</string>
    <string name="photo_number">照片数量</string>
    <string name="photo_add">拍照添加</string>
    <string name="species_list">物种列表</string>
    <string name="species_count">物种数量</string>
    <string name="species_add">物种添加</string>
    <string name="average_basal_diameter_cm">平均基径(cm)</string>
    <string name="average_DBH_cm">平均胸径(cm)</string>
    <string name="picture_load_fail">图片加载失败</string>
    <string name="loading_picture">图片加载中&#8230;</string>

    <!-- 我的相关 -->
    <string name="clean">清理缓存</string>
    <string name="clean_success">清理成功</string>
    <string name="logout">退出登录</string>

    <!-- 物种相关 -->
    <string name="species_info">物种信息</string>
    <string name="species_name">物种名</string>
    <string name="species_code">标本编号*</string>
    <string name="plant_count">株丛数</string>
    <string name="vegetative_branch_height_cm">营养枝高度(cm)</string>
    <string name="generative_branch_height_cm">生殖枝高度(cm)</string>
    <string name="coverage_percent">盖度(%)</string>
    <string name="biomass_g">生物量(g)</string>
    <string name="tree_number">树号</string>
    <string name="basal_diameter_cm">基径(cm)</string>
    <string name="DBH_cm">胸径(cm)</string>
    <string name="height_cm">高度(cm)</string>
    <string name="canopy_x_cm">冠幅X(cm)</string>
    <string name="canopy_y_cm">冠幅Y(cm)</string>

    <!-- 样点相关 -->
    <string name="samplepoint_info">样点信息</string>
    <string name="samplepoint_code">样点编号*</string>
    <string name="formation_type">群系类型</string>
    <string name="dominant_species">优势种</string>
    <string name="topography_vegetation_status">地形和植被概况</string>
    <string name="administrative_name">行政地名</string>
    <string name="altitude_m">海拔(m)</string>

    <!-- 提示 -->
    <string name="point_save_error">样点保存错误</string>
    <string name="please_fill_point_code">请填写样点编号</string>
    <string name="land_save_error">样地保存错误</string>
    <string name="please_fill_land_code">请填写样地编号</string>
    <string name="plot_save_error">样方保存错误</string>
    <string name="please_fill_plot_code">请填写样方编号</string>
    <string name="species_save_error">物种保存错误</string>
    <string name="please_fill_species_code">请填写标本编号</string>

    <!-- 验证 -->
    <string name="phone_number">手机号</string>
    <string name="please_input_phone_number">请输入手机号</string>
    <string name="please_input_valid_phone_number">请输入有效的手机号</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="please_input_valid_verification_code">请输入有效的验证码</string>
    <string name="username">用户名</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="password_no_less_than_six_letter">密码不得少于6位</string>
    <string name="get_verification_code">获取</string>
    <string name="reget_verification_code">重新获取</string>
    <string name="verification_code">验证码</string>
    <string name="verification_code_error">验证码错误</string>
    <string name="verification_code_expired">验证码已失效</string>
    <string name="get_verification_code_fail">获取验证码失败</string>
    <string name="get_verification_code_success">验证码已发送</string>
    <string name="password">密码</string>
    <string name="login">登 录</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="signup">注 册</string>
    <string name="signup_success">注册成功</string>
    <string name="signup_fail">注册失败</string>
    <string name="welcome_join">欢迎加入</string>
    <string name="new_user_register">新用户注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_note">温馨提示:未注册账号的手机号，登陆时将自动注册</string>
    <string name="sending">发送中&#8230;</string>
    <string name="net_unreachable">网络似乎出现了问题</string>
    <string name="phone_been_taken">该手机号已被注册</string>
    <string name="phone_password_dismatch">手机与密码不匹配，请重新输入</string>
</resources>
