<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.thcreate.vegsurveyassistant.viewmodel.ArborSpeciesActivityViewModel"/>
    </data>

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activity.ArborSpeciesActivity"
        tools:showIn="@layout/activity_arborspecies">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rect"
                android:text="@string/species_info"
                android:textAppearance="@android:style/TextAppearance.Medium"/>

            <TextView
                android:layout_marginTop="0dp"
                android:background="@drawable/rect_nobackground_lrborder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/species_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
            <EditText
                android:inputType="text"
                android:layout_marginTop="0dp"
                android:background="@drawable/rect_nobackground_lrbborder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:text="@={viewmodel.species.name}"/>

            <TextView
                android:layout_marginTop="0dp"
                android:background="@drawable/rect_nobackground_lrborder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tree_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
            <EditText
                android:inputType="text"
                android:layout_marginTop="0dp"
                android:background="@drawable/rect_nobackground_lrbborder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:text="@={viewmodel.species.treeNumber}"/>

            <TextView
                android:layout_marginTop="0dp"
                android:background="@drawable/rect_nobackground_lrborder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/species_code"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
            <EditText
                android:inputType="text"
                android:layout_marginTop="0dp"
                android:background="@drawable/rect_nobackground_lrbborder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:text="@={viewmodel.species.code}"/>

            <TextView
                android:layout_marginTop="0dp"
                android:background="@drawable/rect_nobackground_lrborder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DBH_cm"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
            <EditText
                android:inputType="numberDecimal"
                android:layout_marginTop="0dp"
                android:background="@drawable/rect_nobackground_lrbborder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:text="@={viewmodel.species.DBH}"/>

            <TextView
                android:layout_marginTop="0dp"
                android:background="@drawable/rect_nobackground_lrborder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/height_cm"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
            <EditText
                android:inputType="numberDecimal"
                android:layout_marginTop="0dp"
                android:background="@drawable/rect_nobackground_lrbborder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:text="@={viewmodel.species.height}"/>

            <TextView
                android:layout_marginTop="0dp"
                android:background="@drawable/rect_nobackground_lrborder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/canopy_x_cm"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
            <EditText
                android:inputType="numberDecimal"
                android:layout_marginTop="0dp"
                android:background="@drawable/rect_nobackground_lrbborder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:text="@={viewmodel.species.canopyX}"/>

            <TextView
                android:layout_marginTop="0dp"
                android:background="@drawable/rect_nobackground_lrborder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/canopy_y_cm"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
            <EditText
                android:inputType="numberDecimal"
                android:layout_marginTop="0dp"
                android:background="@drawable/rect_nobackground_lrbborder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:text="@={viewmodel.species.canopyY}"/>

            <TextView
                android:layout_marginTop="0dp"
                android:background="@drawable/rect_nobackground_lrborder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
            <EditText
                android:inputType="text"
                android:layout_marginTop="0dp"
                android:background="@drawable/rect_nobackground_lrbborder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:text="@={viewmodel.species.note}"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</layout>